--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -19,10 +19,28 @@ jobs:
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Install Dependencies
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+      run: composer update -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
     - name: Generate key
       run: php artisan key:generate
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       run: vendor/bin/phpunit
+ deploy:
+    needs: [tests]
+
+    runs-on: ubuntu-latest
+
+    steps: 
+    - name: 'SSH to VL Online'
+      uses: appleboy/ssh-action@master
+      with: 
+        host: ${{secrets.HOST}}
+        username: ${{secrets.USERNAME}}
+        password: ${{secrets.PASSWORD}}
+        port: ${{secrets.PORT}}
+        script: |
+          cd /var/www/html/vl_online
+          git pull origin main
+          php artisan migrate
+        
