--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,4 +1,4 @@
-name: VLOnline
+name: Deploy Main
 
 on:
   push:
@@ -26,22 +26,3 @@ jobs:
       run: chmod -R 777 storage bootstrap/cache
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       run: vendor/bin/phpunit
-
-  deploy:
-      needs: [tests]
-
-      runs-on: ubuntu-latest
-
-      steps: 
-      - name: 'SSH to VL Online'
-        uses: appleboy/ssh-action@master
-        with: 
-          host: ${{secrets.HOST}}
-          username: ${{secrets.USERNAME}}
-          password: ${{secrets.PASSWORD}}
-          port: ${{secrets.PORT}}
-          script: |
-            cd /var/www/html/vl_online
-            git pull origin main
-           
-        
