--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,10 +1,10 @@
-name: Deploy Main
+name: Deploy Production
 
 on:
   push:
-    branches: [ main ]
+    branches: [ production ]
   pull_request:
-    branches: [ main ]
+    branches: [ production ]
 
 jobs:
   tests:
@@ -26,3 +26,21 @@ jobs:
       run: chmod -R 777 storage bootstrap/cache
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       run: vendor/bin/phpunit
+
+ deploy:
+      needs: [tests]
+
+      runs-on: ubuntu-latest
+
+      steps: 
+      - name: 'VL Online Production'
+        uses: appleboy/ssh-action@master
+        with: 
+          host: ${{secrets.PROD_HOST}}
+          username: ${{secrets.PROD_USERNAME}}
+          password: ${{secrets.PROD_PASSWORD}}
+          port: ${{secrets.PROD_PORT}}
+          script: |
+            cd /var/www/vl_online
+            git pull origin production
+           
