--- a/.github/workflows/ukm.yml
+++ b/.github/workflows/ukm.yml
@@ -2,9 +2,9 @@ name: UKM
 
 on:
   push:
-    branches: [ production_ukm ]
+    branches: [ prod_ukm ]
   pull_request:
-    branches: [ production_ukm ]
+    branches: [ prod_ukm ]
 
 jobs:
   tests:
@@ -42,6 +42,6 @@ jobs:
           port: ${{secrets.PORT}}
           script: |
             cd /var/www/html/mall-ukm
-            git pull origin production_ukm
+            git pull origin prod_ukm
            
         
