--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -27,20 +27,20 @@ jobs:
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       run: vendor/bin/phpunit
 
-  # deploy:
-  #     needs: [tests]
+  deploy:
+      needs: [tests]
 
-  #     runs-on: ubuntu-latest
+      runs-on: ubuntu-latest
 
-  #     steps:
-  #     - name: 'SSH to VL Online'
-  #       uses: appleboy/ssh-action@master
-  #       with:
-  #         host: ${{secrets.HOST}}
-  #         username: ${{secrets.USERNAME}}
-  #         password: ${{secrets.PASSWORD}}
-  #         port: ${{secrets.PORT}}
-  #         script: |
-  #           cd /var/www/html/vl_online
-  #           git pull origin production
+      steps:
+      - name:  VL Online Production'
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{secrets.PROD_HOST}}
+          username: ${{secrets.PROD_USERNAME}}
+          password: ${{secrets.PROD_PASSWORD}}
+          port: ${{secrets.PROD_PORT}}
+          script: |
+            cd /var/www/html/vl_online
+            git pull origin production
 
